feat: created hero component

--- a/src/atoms/link/target-blank/index.astro
+++ b/src/atoms/link/target-blank/index.astro
@@ -9,6 +9,6 @@ const {
 } = Astro.props
 
 ---
-<a class="block" href={ href } aria-label={ aria_label }>
+<a class="block" href={ href } aria-label={ aria_label } target="_blank">
     <slot/>
 </a>
