--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,19 @@
 ---
 
-// IMPORT LAYOUT COMPONENTS
-import Layout from "@/layouts/Layout.astro"
+// RUNTIME
+const runtime = Astro.locals.runtime
 
-// IMPORT COMMON COMPONENTS
-import Footer from "@/components/common/footer/index.astro"
-import Header from "@/components/common/header/index.astro"
-import HeaderBanner from "@/components/common/header-banner/index.astro"
+const {
+
+    CDN,
+    ENDPOINT,
+    ENVIRONMENT,
+    PROJECT
+
+} = runtime.env
+
+// IMPORTS ASTRO LAYOUTS
+import Layout from "@/layouts/Layout.astro"
 
 // HOME COMPONENTS
 import Home from "@/components/home/index.astro"
@@ -17,8 +24,5 @@ import Home from "@/components/home/index.astro"
 	image=""
 	title=""
 >
-	<HeaderBanner/>
-	<Header/>
-	<Home/>
-	<Footer/>
+	<Home />
 </Layout>
