feat: created services component

--- a/src/components/common/404/index.astro
+++ b/src/components/common/404/index.astro
@@ -3,7 +3,7 @@
 import Button from "@/atoms/button/primary/index.astro"
 
 // IMPORTS ASTRO LAYOUTS
-import Container from "@/layouts/Container.astro"
+import Container from "@/layouts/container/index.astro"
 ---
 <section class="grow h-full w-full py-20 md:pt-32 flex flex-col justify-center items-center">
     <Container>
