--- a/src/components/common/footer/index.astro
+++ b/src/components/common/footer/index.astro
@@ -1,10 +1,10 @@
 ---
 
 // IMPORTS ASTRO LAYOUTS
-import Container from "@/layouts/Container.astro"
+import Container from "@/layouts/container/index.astro"
 
 ---
-<footer class="bg-black py-20">
+<footer class="bg-pink-600 py-20">
     <Container>
         <p class="text-white">I am footer</p>
     </Container>
