--- a/src/components/common/header-banner/index.astro
+++ b/src/components/common/header-banner/index.astro
@@ -1,6 +1,6 @@
 ---
 // IMPORTS ASTRO LAYOUTS
-import Container from "@/layouts/Container.astro"
+import Container from "@/layouts/container/index.astro"
 
 const runtime = Astro.locals.runtime
 const env = runtime.env.ENVIRONMENT
