--- a/src/components/common/header/index.astro
+++ b/src/components/common/header/index.astro
@@ -1,7 +1,7 @@
 ---
 
 // IMPORTS ASTRO LAYOUTS
-import Container from "@/layouts/Container.astro"
+import Container from "@/layouts/container/index.astro"
 
 ---
 <header class="bg-black h-12">
