--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -2,12 +2,16 @@
 
 // IMPORT ASTRO COMPONENTS
 import Footer from "@/components/common/footer/index.astro"
+import FreeInstantEvaluation from "@/components/home/free-instant-evaluation/index.astro"
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
+import Services from "@/components/home/services/index.astro"
 
 ---
 <HeaderBanner />
 <Header />
 <Hero />
+<FreeInstantEvaluation />
+<Services />
 <Footer />
