--- a/src/pages/404/index.astro
+++ b/src/pages/404/index.astro
@@ -1,6 +1,6 @@
 ---
 // IMPORTS ASTRO LAYOUTS
-import Layout from "@/layouts/Layout.astro"
+import Layout from "@/layouts/layout/index.astro"
 
 // IMPORTS ASTRO COMPONENTS
 import Footer from "@/components/common/footer/index.astro"
