--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const {
 } = runtime.env
 
 // IMPORTS ASTRO LAYOUTS
-import Layout from "@/layouts/Layout.astro"
+import Layout from "@/layouts/layout/index.astro"
 
 // HOME COMPONENTS
 import Home from "@/components/home/index.astro"
