feat: created blogs component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -1,6 +1,7 @@
 ---
 
 // IMPORT ASTRO COMPONENTS
+import Blogs from "@/components/home/blogs/index.astro"
 import Footer from "@/components/common/footer/index.astro"
 import FreeInstantEvaluation from "@/components/home/free-instant-evaluation/index.astro"
 import Header from "@/components/common/header/index.astro"
@@ -14,4 +15,5 @@ import Services from "@/components/home/services/index.astro"
 <Hero />
 <FreeInstantEvaluation />
 <Services />
+<Blogs />
 <Footer />
