feat: created seo expertise component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -7,6 +7,7 @@ import FreeInstantEvaluation from "@/components/home/free-instant-evaluation/ind
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
+import SeoExpertise from "@/components/home/seo-expertise/index.astro"
 import Services from "@/components/home/services/index.astro"
 
 ---
@@ -16,4 +17,5 @@ import Services from "@/components/home/services/index.astro"
 <FreeInstantEvaluation />
 <Services />
 <Blogs />
+<SeoExpertise />
 <Footer />
