feat: created seo foundation

--- a/src/components/home/seo-expertise/index.astro
+++ b/src/components/home/seo-expertise/index.astro
@@ -1,8 +1,5 @@
 ---
 
-// IMPORTS ASTRO LAYOUTS
-import Container from "@/layouts/container/index.astro"
-
 // IMPORTS ASTRO COMPONENTS
 import DigitalMarketingTeam from "@/components/home/seo-expertise/digital-marketing-team/index.astro"
 
@@ -29,24 +26,22 @@ const dm_team = {
 }
 
 ---
-<section class="py- bg-gradient-to-r from-[#3D8EF7] to-[#9303F1]" style="background-color: transparent; background-image: radial-gradient(at center center, #3D8EF7 0%, #9303F1 100%);">
-    <!-- <Container> -->
-        <section class="grid grid-cols-5">
-            <section class="col-span-2 w-full aspect-square flex items-center h-full p-4">
-                <PictureInternal
-                    alternative_text={ seo_expertise.title }
-                    source={ seo_expertise.cover }
-                />
-            </section>
-            <section class="col-span-3 space-y-16 py-16 px-10">
-                <section class="space-y-4">
-                    <HeadingThreeWhiteCenterUppercase>{ seo_expertise.title }</HeadingThreeWhiteCenterUppercase>
-                    <ParagraphLargeWhiteCenter>{ seo_expertise.description }</ParagraphLargeWhiteCenter>
-                </section>
-                <DigitalMarketingTeam
-                    data={ dm_team }
-                />
-            </section>
+<section class="bg-transparent bg-gradient-to-r from-[#3D8EF7] to-[#9303F1] bg-center" style="background-color: transparent; background-image: radial-gradient(at center center, #3D8EF7 0%, #9303F1 100%);">
+    <section class="grid grid-cols-5">
+        <section class="col-span-2 w-full aspect-square flex items-center h-full p-4">
+            <PictureInternal
+                alternative_text={ seo_expertise.title }
+                source={ seo_expertise.cover }
+            />
         </section>
-    <!-- </Container> -->
+        <section class="col-span-3 space-y-16 py-16 px-10">
+            <section class="space-y-4">
+                <HeadingThreeWhiteCenterUppercase>{ seo_expertise.title }</HeadingThreeWhiteCenterUppercase>
+                <ParagraphLargeWhiteCenter>{ seo_expertise.description }</ParagraphLargeWhiteCenter>
+            </section>
+            <DigitalMarketingTeam
+                data={ dm_team }
+            />
+        </section>
+    </section>
 </section>
