--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -7,7 +7,8 @@ import FreeInstantEvaluation from "@/components/home/free-instant-evaluation/ind
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
-import SeoExpertise from "@/components/home/seo-expertise/index.astro"
+import SEOExpertise from "@/components/home/seo-expertise/index.astro"
+import SEOFoundation from "@/components/home/seo-foundation/index.astro"
 import Services from "@/components/home/services/index.astro"
 
 ---
@@ -17,5 +18,6 @@ import Services from "@/components/home/services/index.astro"
 <FreeInstantEvaluation />
 <Services />
 <Blogs />
-<SeoExpertise />
+<SEOExpertise />
+<SEOFoundation />
 <Footer />
