feat: created newsletter component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -7,6 +7,7 @@ import FreeInstantEvaluation from "@/components/home/free-instant-evaluation/ind
 import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
+import Newsletter from "@/components/home/newsletter/index.astro"
 import SEOExpertise from "@/components/home/seo-expertise/index.astro"
 import SEOFoundation from "@/components/home/seo-foundation/index.astro"
 import Services from "@/components/home/services/index.astro"
@@ -20,4 +21,5 @@ import Services from "@/components/home/services/index.astro"
 <Blogs />
 <SEOExpertise />
 <SEOFoundation />
+<Newsletter />
 <Footer />
