feat: created header

--- a/src/components/home/hero/index.astro
+++ b/src/components/home/hero/index.astro
@@ -16,7 +16,7 @@ const data = {
 }
 
 ---
-<section class="flex flex-col items-center gap-12 py-32" style="background-color: transparent; background-image: radial-gradient(at center center, #16CBD8 18%, #6400E0 67%);">
+<section class="flex flex-col items-center gap-12 py-32 mt-28" style="background-color: transparent; background-image: radial-gradient(at center center, #16CBD8 18%, #6400E0 67%);">
     <HeadingOneWhite>{ data.title }</HeadingOneWhite>
     <Paragraph2xlWhiteCenter>{ data.description }</Paragraph2xlWhiteCenter>
     <Link href={ data.button_link } aria_label={ data.button_text }>
