--- a/src/components/home/newsletter/index.astro
+++ b/src/components/home/newsletter/index.astro
@@ -10,6 +10,7 @@ import Form from "@/components/home/newsletter/form/index.astro"
 import HeadingFiveWhiteCenter from "@/atoms/heading/five/white/center/index.astro"
 import PictureInternalContain from "@/atoms/picture/internal/contain/index.astro"
 
+// HARDCODED DATA
 const data = {
 
     title: "Subscribe to our newsletter",
