--- a/src/layouts/layout/index.astro
+++ b/src/layouts/layout/index.astro
@@ -32,7 +32,7 @@ const {
         <meta property="twitter:description" content={ description } />
         <meta property="twitter:image" content={ image } />
         <meta property="article:publisher" content="" />
-        <link rel="icon" href="" />
+        <link rel="icon" href="/fs-favicon.webp" />
     </head>
     <body class="">
         <slot />
