feat: created reviews component

--- a/src/components/home/index.astro
+++ b/src/components/home/index.astro
@@ -8,6 +8,7 @@ import Header from "@/components/common/header/index.astro"
 import HeaderBanner from "@/components/common/header-banner/index.astro"
 import Hero from "@/components/home/hero/index.astro"
 import Newsletter from "@/components/home/newsletter/index.astro"
+import Reviews from "@/components/home/reviews/index.astro"
 import SEOExpertise from "@/components/home/seo-expertise/index.astro"
 import SEOFoundation from "@/components/home/seo-foundation/index.astro"
 import Services from "@/components/home/services/index.astro"
@@ -18,6 +19,7 @@ import Services from "@/components/home/services/index.astro"
 <Hero />
 <FreeInstantEvaluation />
 <Services />
+<Reviews />
 <Blogs />
 <SEOExpertise />
 <SEOFoundation />
