feat: optimized home page for mobile

--- a/src/components/home/blogs/index.astro
+++ b/src/components/home/blogs/index.astro
@@ -29,11 +29,11 @@ const blogs = Array(3).fill({
 })
 
 ---
-<section class="bg-black py-16">
+<section class="bg-black py-4 md:py-16">
     <Container>
-        <section class="space-y-10">
+        <section class="space-y-4 md:space-y-10">
             <HeadingTwoWhiteCenter>{ data.title }</HeadingTwoWhiteCenter>
-            <section class="grid grid-cols-3 gap-6">
+            <section class="grid md:grid-cols-3 gap-4 md:gap-6">
                 {
 
                     blogs.map( ( value ) => {
