--- a/src/components/home/seo-expertise/index.astro
+++ b/src/components/home/seo-expertise/index.astro
@@ -27,14 +27,14 @@ const dm_team = {
 
 ---
 <section class="bg-transparent bg-gradient-to-r from-[#3D8EF7] to-[#9303F1] bg-center" style="background-color: transparent; background-image: radial-gradient(at center center, #3D8EF7 0%, #9303F1 100%);">
-    <section class="grid grid-cols-5">
-        <section class="col-span-2 w-full aspect-square flex items-center h-full p-4">
+    <section class="grid md:grid-cols-5">
+        <section class="md:col-span-2 w-full aspect-square flex items-center h-full p-4">
             <PictureInternal
                 alternative_text={ seo_expertise.title }
                 source={ seo_expertise.cover }
             />
         </section>
-        <section class="col-span-3 space-y-16 py-16 px-10">
+        <section class="md:col-span-3 space-y-4 md:space-y-16 pb-4 md:pt-16 md:pb-16 px-4 md:px-10">
             <section class="space-y-4">
                 <HeadingThreeWhiteCenterUppercase>{ seo_expertise.title }</HeadingThreeWhiteCenterUppercase>
                 <ParagraphLargeWhiteCenter>{ seo_expertise.description }</ParagraphLargeWhiteCenter>
