--- a/src/components/home/services/index.astro
+++ b/src/components/home/services/index.astro
@@ -23,11 +23,11 @@ const services = Array(8).fill({
 })
 
 ---
-<section class="bg-black py-16">
+<section class="bg-black py-4 md:py-16">
     <Container>
-        <section class="space-y-10">
+        <section class="space-y-4 md:space-y-10">
             <HeadingTwoWhiteCenter>{ data.title }</HeadingTwoWhiteCenter>
-            <section class="grid grid-cols-4 gap-5">
+            <section class="grid md:grid-cols-4 gap-4 md:gap-5">
                 {
 
                     services.map( ( value ) => {
