--- a/src/atoms/button/neon/index.astro
+++ b/src/atoms/button/neon/index.astro
@@ -1,3 +1,3 @@
-<button class="bg-cadence_neon font-roboto font-light text-lg px-10 h-14 shadow flex items-center rounded border border-cadence_neon tracking-wide">
+<button class="bg-cadence_neon font-roboto font-light text-sm md:text-lg px-6 md:px-10 h-12 md:h-14 shadow flex items-center rounded border border-cadence_neon tracking-wide">
     <slot />
 </button>
