--- a/src/atoms/button/red/index.astro
+++ b/src/atoms/button/red/index.astro
@@ -1,3 +1,3 @@
-<button class="bg-cadence_red text-white font-roboto text-2xl px-10 h-16 flex items-center rounded border border-cadence_red">
+<button class="bg-cadence_red text-white font-roboto md:text-2xl px-10 h-12 md:h-16 flex items-center rounded border border-cadence_red">
     <slot />
 </button>
