--- a/src/atoms/heading/five/white/center/index.astro
+++ b/src/atoms/heading/five/white/center/index.astro
@@ -1,3 +1,3 @@
-<h5 class="text-[#F0F0F0] font-light font-arial text-center">
+<h5 class="text-[#F0F0F0] font-light font-arial text-center text-sm md:text-base">
     <slot/>
 </h5>
