--- a/src/atoms/heading/one/white/center/index.astro
+++ b/src/atoms/heading/one/white/center/index.astro
@@ -1,3 +1,3 @@
-<h1 class="text-6xl text-white font-arial font-extrabold text-center">
+<h1 class="text-5xl md:text-6xl text-white font-arial font-extrabold text-center leading-tight">
     <slot/>
 </h1>
