--- a/src/atoms/heading/three/black/center/uppercase/index.astro
+++ b/src/atoms/heading/three/black/center/uppercase/index.astro
@@ -1,3 +1,3 @@
-<h3 class="text-3xl text-center font-arial font-medium uppercase">
+<h3 class="text-2xl md:text-3xl text-center font-arial font-medium uppercase">
     <slot/>
 </h3>
