--- a/src/atoms/heading/two/white/center/index.astro
+++ b/src/atoms/heading/two/white/center/index.astro
@@ -1,3 +1,3 @@
-<h2 class="text-white text-4xl text-center font-arial font-bold tracking-wider">
+<h2 class="text-white text-3xl md:text-4xl text-center font-arial font-bold tracking-wider">
     <slot/>
 </h2>
