--- a/src/atoms/paragraph/large/white/center/index.astro
+++ b/src/atoms/paragraph/large/white/center/index.astro
@@ -1,3 +1,3 @@
-<p class="text-lg text-center text-white font-arial font-light">
+<p class="md:text-lg text-center text-white font-arial font-light">
     <slot/>
 </p>
