--- a/src/atoms/paragraph/two-xl/white/center/index.astro
+++ b/src/atoms/paragraph/two-xl/white/center/index.astro
@@ -1,3 +1,3 @@
-<p class="text-2xl text-center text-white font-arial">
+<p class="text-xl md:text-2xl text-center text-white font-arial">
     <slot/>
 </p>
