--- a/src/atoms/paragraph/xl/center/index.astro
+++ b/src/atoms/paragraph/xl/center/index.astro
@@ -1,3 +1,3 @@
-<p class="text-xl text-center font-arial font-light leading-normal">
+<p class="md:text-xl text-center font-arial font-light leading-normal">
     <slot/>
 </p>
