--- a/src/components/common/footer/index.astro
+++ b/src/components/common/footer/index.astro
@@ -13,22 +13,22 @@ import PictureInternalContain from "@/atoms/picture/internal/contain/index.astro
 ---
 <footer class="bg-[#002058] bg-no-repeat bg-cover" style=`background-image: url(${ "/images/footer-background-image.jpg" })`>
     <Container>
-       <section class="md:flex justify-between py-16">
+       <section class="md:flex justify-between py-4 space-y-10 md:space-y-0 md:py-16">
             <section class="space-y-4">
-                <div class="h-32 w-full">
+                <div class="h-32 w-full hidden md:block">
                     <PictureInternalContain
                         alternative_text="cadenceseo light logo"
                         source="/logo/white-logo.webp"
                     />
                 </div>
                 <div class="flex flex-col gap-6 items-center">
-                    <span class="text-[#FAFAFA] text-3xl font-arial font-bold">The Opportunities Are Endless.</span>
+                    <span class="text-[#FAFAFA] text-2xl md:text-3xl text-center font-arial font-bold">The Opportunities Are Endless.</span>
                     <span class="text-[#ff0000] font-arial text-xl">SEO Consulting by State</span>
                 </div>
             </section>
             <section class="flex flex-col gap-6 items-center">
                 <span class="text-white font-arial uppercase text-xl">Contact Us</span>
-                <div class="flex flex-col gap-2 items-center">
+                <div class="flex flex-col gap-1 md:gap-2 items-center">
                     <span class="text-white font-arial font-medium">1430 S Boulder Street Unit A, Gilbert , AZ 85296</span>
                     <span class="text-white font-arial font-medium">Phone: <a href="tel:8882102602"><span class="text-white font-arial font-light">888-210-2602</span></a></span>
                     <span class="text-white font-arial font-medium">Email: <a href="mailto:info@cadenceseo.com"><span class="text-white font-arial font-light">Info@cadenceseo.com</span></a></span>
