--- a/src/components/home/blogs/card/index.astro
+++ b/src/components/home/blogs/card/index.astro
@@ -22,7 +22,7 @@ const {
 ---
 <div class="bg-white rounded relative h-full overflow-hidden">
     <div class="relative">
-        <div class="w-full aspect-[3/2] bg-zinc-200">
+        <div class="w-full aspect-video md:aspect-[3/2] bg-zinc-200">
             <PictureInternal
                 alternative_text={ title }
                 source={ source }
@@ -35,7 +35,7 @@ const {
             />
         </div>
     </div>
-    <div class="px-8 py-12 space-y-6">
+    <div class="px-8 py-8 md:py-12 space-y-4 md:space-y-6 mt-2 md:mt-0">
         <Link href={ "/blogs/" + link } aria_label={ button_text }>
             <HeadingThreePurple>{ title }</HeadingThreePurple>
         </Link>
