--- a/src/components/home/free-instant-evaluation/index.astro
+++ b/src/components/home/free-instant-evaluation/index.astro
@@ -23,14 +23,14 @@ const data = {
 
 ---
 <Container>
-    <section class="grid grid-cols-2 gap-4 py-16">
+    <section class="grid md:grid-cols-2 gap-4 py-4 md:py-16">
         <div class="w-full h-full overflow-hidden">
             <PictureInternal
                 alternative_text={ data.title }
                 source={ data.cover }
             />
         </div>
-        <div class="flex flex-col items-center gap-2 bg-cadence_light_gray border border-[#e3e3e3] p-10">
+        <div class="flex flex-col items-center gap-2 bg-cadence_light_gray border border-[#e3e3e3] p-4 md:p-10">
             <HeadingFour>{ data.title }</HeadingFour>
             <ParagraphSmall>{ data.description }</ParagraphSmall>
             <Form />
