--- a/src/components/home/newsletter/index.astro
+++ b/src/components/home/newsletter/index.astro
@@ -19,9 +19,9 @@ const data = {
 }
 
 ---
-<section class="bg-black py-20">
+<section class="bg-black py-4 md:py-20">
     <Container>
-        <section class="flex flex-col gap-6 items-center">
+        <section class="flex flex-col gap-4 md:gap-6 items-center">
             <div class="size-14">
                 <PictureInternalContain
                     alternative_text="email icon"
@@ -29,7 +29,7 @@ const data = {
                 />
             </div>
             <div class="flex flex-col gap-2 items-center">
-                <h2 class="text-white text-5xl text-center font-arial font-bold tracking-wider">{ data.title }</h2>
+                <h2 class="text-white text-2xl md:text-5xl text-center font-arial font-bold tracking-wider">{ data.title }</h2>
                 <HeadingFiveWhiteCenter>{ data.description }</HeadingFiveWhiteCenter>
                 <Form />
             </div>
