--- a/src/components/home/seo-foundation/index.astro
+++ b/src/components/home/seo-foundation/index.astro
@@ -25,11 +25,11 @@ const seo_foundation = {
 }
 
 ---
-<section class="bg-cadence_cream py-20">
+<section class="bg-cadence_cream py-4 md:py-20">
     <Container>
-        <section class="flex flex-col items-center gap-16 px-20">
+        <section class="flex flex-col items-center gap-4 md:gap-16 md:px-20">
             <ParagraphXlCenter>{ data.description }</ParagraphXlCenter>
-            <div class="flex flex-col items-center gap-6">
+            <div class="flex flex-col items-center gap-4 md:gap-6">
                 <HeadingThreeCenterUppercase>{ seo_foundation.title }</HeadingThreeCenterUppercase>
                 <ParagraphXlCenter>{ seo_foundation.description }</ParagraphXlCenter>
                 <Link href={ "/" + seo_foundation.button_link } aria_label={ seo_foundation.button_text }>
