--- a/src/components/home/services/card/index.astro
+++ b/src/components/home/services/card/index.astro
@@ -18,7 +18,7 @@ const {
 
 ---
 <Link href={ href } aria_label={ title }>
-    <div class="flex flex-col items-center gap-4 border border-cadence_cyan rounded-2xl py-10 px-4 hover:bg-cadence_cyan/80">
+    <div class="flex flex-col items-center gap-4 border border-cadence_cyan rounded-2xl py-4 md:py-10 px-4 hover:bg-cadence_cyan/80">
         <div class="size-14">
             <PictureInternalContain
                 alternative_text={ title }
