--- a/src/components/home/free-instant-evaluation/index.astro
+++ b/src/components/home/free-instant-evaluation/index.astro
@@ -24,7 +24,7 @@ const data = {
 ---
 <Container>
     <section class="grid md:grid-cols-2 gap-4 py-4 md:py-16">
-        <div class="w-full h-full overflow-hidden">
+        <div class="w-full h-full overflow-hidden hidden md:block">
             <PictureInternal
                 alternative_text={ data.title }
                 source={ data.cover }
