chores: updated comments

--- a/src/components/common/header/index.astro
+++ b/src/components/common/header/index.astro
@@ -3,7 +3,7 @@
 // IMPORTS ASTRO LAYOUTS
 import Container from "@/layouts/container/index.astro"
 
-// IMPORTS ASTRO COMPONENTS
+// IMPORTS JSX COMPONENTS
 import HeaderMobile from "@/components/common/header/mobile/index.jsx"
 
 // IMPORTS ASTRO ATOMS
